<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_new_note"
        app:titleTextColor="@color/black" />

    <EditText
        android:id="@+id/etNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/test_shape"
        android:elevation="4dp"
        android:gravity="start|top"
        android:hint="@string/enter_your_note"
        android:maxHeight="100dp"
        android:minHeight="100dp"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="226dp" />

    <DatePicker
        android:id="@+id/tvDate"
        android:theme="@style/DatePickerStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:hint="@string/date_pattern"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintTop_toBottomOf="@+id/etNote"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="226dp" />

    <TextView
        android:elevation="8dp"
        style="@style/ButtonTextView"
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="@+id/etNote"
        app:layout_constraintStart_toStartOf="@+id/etNote"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>